--- a/VirtualTourist/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/VirtualTourist/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="PhotoCollectionViewCell" reuseIdentifier="PhotoCollectionViewCell" id="0gw-ms-gpT" customClass="PhotoCollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="FlickrCell" reuseIdentifier="FlickrCell" id="0gw-ms-gpT" customClass="PhotoCollectionViewCell" customModule="VirtualTourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -80,12 +80,20 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="0cT-6S-w6X" id="cal-MT-aF9"/>
+                                    <outlet property="delegate" destination="0cT-6S-w6X" id="KHT-fw-pQ3"/>
+                                </connections>
                             </collectionView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hn1-Wz-x9q">
                                 <rect key="frame" x="0.0" y="560" width="600" height="44"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="JIl-Wf-8D5"/>
-                                    <barButtonItem title="New Collection" id="wT8-Zb-kJe" userLabel="New Collection"/>
+                                    <barButtonItem title="New Collection" id="wT8-Zb-kJe" userLabel="New Collection">
+                                        <connections>
+                                            <action selector="newCollection:" destination="0cT-6S-w6X" id="zad-SA-dl1"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="FMY-fZ-jqm"/>
                                     <barButtonItem title="Delete Selected" id="V1r-WA-q4x" userLabel="Delete Selected"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="d7H-37-UOE"/>
