Delete selected photos

--- a/VirtualTourist/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/VirtualTourist/Base.lproj/Main.storyboard
@@ -57,11 +57,8 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KI7-za-xBO">
                                                     <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nmh-45-ipz">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nmh-45-ipz">
                                                     <rect key="frame" x="130" y="15" width="22" height="22"/>
-                                                    <state key="normal">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -95,7 +92,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="FMY-fZ-jqm"/>
-                                    <barButtonItem title="Delete Selected" id="V1r-WA-q4x" userLabel="Delete Selected"/>
+                                    <barButtonItem title="Delete Selected" id="V1r-WA-q4x" userLabel="Delete Selected">
+                                        <connections>
+                                            <action selector="deleteSelected:" destination="0cT-6S-w6X" id="fGX-gC-zc1"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="d7H-37-UOE"/>
                                 </items>
                             </toolbar>
